--- a/ComcastCRMGUIFramework/test-output/old/Default suite/methods-alphabetical.html
+++ b/ComcastCRMGUIFramework/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ce6090">  <td>24/07/14 13:49:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact_Test.CreateContactTest()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">CreateContactTest</td> 
+<tr bgcolor="a4b689">  <td>24/07/19 12:27:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">&lt;&lt;configAC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a4b689">  <td>24/07/19 12:27:26</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">&lt;&lt;configAM</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a4b689">  <td>24/07/19 12:27:26</td>   <td>166</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">&lt;&lt;configAS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="a4b689">  <td>24/07/19 12:27:26</td>   <td>-77</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">&gt;&gt;configBC</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="a4b689">  <td>24/07/19 12:27:26</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">&gt;&gt;configBM</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="a4b689">  <td>24/07/19 12:27:26</td>   <td>-532</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">&gt;&gt;configBS</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8ba8c8">  <td>24/07/19 12:27:26</td>   <td>-20</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateContact_Test.createcontactwithOrgTest()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]">createcontactwithOrgTest</td> 
   <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dc8ecb">  <td>24/07/14 13:49:44</td>   <td>18949</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAC()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">&lt;&lt;configAC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dc8ecb">  <td>24/07/14 13:49:41</td>   <td>16684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.configAM()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">&lt;&lt;configAM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dc8ecb">  <td>24/07/14 13:49:44</td>   <td>19602</td> <td title="&lt;&lt;BaseClass.configAS()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">&lt;&lt;configAS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dc8ecb">  <td>24/07/14 13:49:12</td>   <td>-12649</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBC()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">&gt;&gt;configBC</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dc8ecb">  <td>24/07/14 13:49:19</td>   <td>-5980</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.configBM()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">&gt;&gt;configBM</td> 
-<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
-<tr bgcolor="dc8ecb">  <td>24/07/14 13:49:12</td>   <td>-13037</td> <td title="&gt;&gt;BaseClass.configBS()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@59662a0b]">&gt;&gt;configBS</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
