--- a/ComcastCRMGUIFramework/test-output/old/Default suite/groups.html
+++ b/ComcastCRMGUIFramework/test-output/old/Default suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Regression Testing</td><td>CreateContact_Test.createcontactwithOrgTest()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke Testing</td><td>CreateContact_Test.CreateContactTest()[pri:0, instance:com.comcast.crm.contacttest.CreateContact_Test@35e2d654]<br/></td></tr>
 </table>
